chore: Update carousel link styling and add z-index to fix overlapping issue

--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -39,6 +39,10 @@
         max-height: 300px;
         object-fit: contain;
       }
+
+      .carousel-link {
+        z-index: 100;
+      }
     }
   }
 }
